# rag-hallucination-detection

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODEX.md  Dockerfile  Makefile  PROJECT_HISTORY.md  Project_Report_FINAL.docx  Project_Report_UPDATED.docx  RAG_doc.docx  README.md  REVISION_RUNBOOK.md  REVISION_SUMMARY.md  RUNBOOK.md  check_progress.py  compute_nli_human_correlation.py  generate_validation_sample.py  main.py  requirements.txt  run_latency_analysis.py  run_multimodel_ablation.py  run_pubmedqa_ablation.py  run_qualitative_analysis.py  run_reranker_ablation.py  run_significance_tests.py  run_zeroshot_baseline.py
archive/: README.md
artifacts/: README.md
experiments/: analyze_human_eval.py  analyze_prolific_results.py  build_ccs_calibration.py  build_coherence_heatmap.py  build_deployment_figure.py  build_disentanglement_figure.py  build_embedding_clusters.py  build_failure_typology.py  build_final_tables.py  build_headline_figure.py  build_human_eval_samples.py  build_qualitative_example.py  build_rag_vs_zeroshot_table.py  build_topk_table.py  fix2_log.md  fix5_log.md  fix7_polish_checklist.md  fix_01_causal_matched_pairs.py  fix_01_log.md  fix_02_log.md  fix_02_scaled_headline_n500.py  fix_03_log.md  fix_03_multimetric_faithfulness.py  fix_04_log.md  fix_04_tau_generalization.py  fix_05_coherence_preserving_noise.py  fix_05_log.md  fix_06_baseline_h2h_pareto.py  fix_06_log.md  fix_07_log.md  fix_07_together_70b_reproduction.py  fix_08_log.md  fix_09_log.md  fix_09_partial_correlations.py  fix_10_log.md  (+42 more)
pip-package/: README.md  pyproject.toml
pip-package/src/context_coherence/: __init__.py  core.py  gate.py
pip-package/tests/: test_core.py
(+824 files in other folders)
